Optimised UI and minor bug fixes

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -22,6 +22,7 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
+  background-color: bisque;
   /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
@@ -41,5 +42,3 @@ button {
   font-family: inherit;
   cursor: pointer;
 }
-
-
